@@ -1,41 +1,11 @@
-/*
- * Copyright 2010 BetaSteward_at_googlemail.com. All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without modification, are
- * permitted provided that the following conditions are met:
- *
- *    1. Redistributions of source code must retain the above copyright notice, this list of
- *       conditions and the following disclaimer.
- *
- *    2. Redistributions in binary form must reproduce the above copyright notice, this list
- *       of conditions and the following disclaimer in the documentation and/or other materials
- *       provided with the distribution.
- *
- * THIS SOFTWARE IS PROVIDED BY BetaSteward_at_googlemail.com ``AS IS'' AND ANY EXPRESS OR IMPLIED
- * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
- * FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL BetaSteward_at_googlemail.com OR
- * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
- * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
- * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
- * ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
- * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
- * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- *
- * The views and conclusions contained in the software and documentation are those of the
- * authors and should not be interpreted as representing official policies, either expressed
- * or implied, of BetaSteward_at_googlemail.com.
- */
+
 package mage.server;
 
 import java.io.File;
-import java.io.FilenameFilter;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.net.MalformedURLException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import javax.management.MBeanServer;
 import mage.cards.ExpansionSet;
 import mage.cards.Sets;
@@ -59,14 +29,7 @@ import mage.server.util.config.GamePlugin;
 import mage.server.util.config.Plugin;
 import mage.utils.MageVersion;
 import org.apache.log4j.Logger;
-import org.jboss.remoting.Client;
-import org.jboss.remoting.ClientDisconnectedException;
-import org.jboss.remoting.ConnectionListener;
-import org.jboss.remoting.InvocationRequest;
-import org.jboss.remoting.InvokerLocator;
-import org.jboss.remoting.Remoting;
-import org.jboss.remoting.ServerInvocationHandler;
-import org.jboss.remoting.ServerInvoker;
+import org.jboss.remoting.*;
 import org.jboss.remoting.callback.InvokerCallbackHandler;
 import org.jboss.remoting.callback.ServerInvokerCallbackHandler;
 import org.jboss.remoting.transport.Connector;
@@ -77,10 +40,9 @@ import org.jboss.remoting.transporter.TransporterServer;
 import org.w3c.dom.Element;
 
 /**
- *
  * @author BetaSteward_at_googlemail.com
  */
-public class Main {
+public final class Main {
 
     private static final Logger logger = Logger.getLogger(Main.class);
     private static final MageVersion version = new MageVersion(MageVersion.MAGE_VERSION_MAJOR, MageVersion.MAGE_VERSION_MINOR, MageVersion.MAGE_VERSION_PATCH, MageVersion.MAGE_VERSION_MINOR_PATCH, MageVersion.MAGE_VERSION_INFO);
@@ -92,7 +54,7 @@ public class Main {
     private static final File pluginFolder = new File("plugins");
     private static final File extensionFolder = new File("extensions");
 
-    public static PluginClassLoader classLoader = new PluginClassLoader();
+    public static final PluginClassLoader classLoader = new PluginClassLoader();
     public static TransporterServer server;
     protected static boolean testMode;
     protected static boolean fastDbMode;
@@ -117,7 +79,7 @@ public class Main {
             }
         }
 
-        if (ConfigSettings.getInstance().isAuthenticationActivated()) {
+        if (ConfigSettings.instance.isAuthenticationActivated()) {
             logger.info("Check authorized user DB version ...");
             if (!AuthorizedUserRepository.instance.checkAlterAndMigrateAuthorizedUser()) {
                 logger.fatal("Failed to start server.");
@@ -127,13 +89,13 @@ public class Main {
         }
 
         logger.info("Loading extension packages...");
-        List<ExtensionPackage> extensions = new ArrayList<>();
         if (!extensionFolder.exists()) {
             if (!extensionFolder.mkdirs()) {
                 logger.error("Could not create extensions directory.");
             }
         }
         File[] extensionDirectories = extensionFolder.listFiles();
+        List<ExtensionPackage> extensions = new ArrayList<>();
         if (extensionDirectories != null) {
             for (File f : extensionDirectories) {
                 if (f.isDirectory()) {
@@ -141,7 +103,7 @@ public class Main {
                         logger.info(" - Loading extension from " + f);
                         extensions.add(ExtensionPackageLoader.loadExtension(f));
                     } catch (IOException e) {
-                        logger.error("Could not load extension in " + f + "!", e);
+                        logger.error("Could not load extension in " + f + '!', e);
                     }
                 }
             }
@@ -152,7 +114,7 @@ public class Main {
             logger.info("Registering custom sets...");
             for (ExtensionPackage pkg : extensions) {
                 for (ExpansionSet set : pkg.getSets()) {
-                    logger.info("- Loading " + set.getName() + " (" + set.getCode() + ")");
+                    logger.info("- Loading " + set.getName() + " (" + set.getCode() + ')');
                     Sets.getInstance().addSet(set);
                 }
                 PluginClassloaderRegistery.registerPluginClassloader(pkg.getClassLoader());
@@ -172,33 +134,33 @@ public class Main {
         UserStatsRepository.instance.updateUserStats();
         logger.info("Done.");
         deleteSavedGames();
-        ConfigSettings config = ConfigSettings.getInstance();
+        ConfigSettings config = ConfigSettings.instance;
         for (GamePlugin plugin : config.getGameTypes()) {
-            GameFactory.getInstance().addGameType(plugin.getName(), loadGameType(plugin), loadPlugin(plugin));
+            GameFactory.instance.addGameType(plugin.getName(), loadGameType(plugin), loadPlugin(plugin));
         }
         for (GamePlugin plugin : config.getTournamentTypes()) {
-            TournamentFactory.getInstance().addTournamentType(plugin.getName(), loadTournamentType(plugin), loadPlugin(plugin));
+            TournamentFactory.instance.addTournamentType(plugin.getName(), loadTournamentType(plugin), loadPlugin(plugin));
         }
         for (Plugin plugin : config.getPlayerTypes()) {
-            PlayerFactory.getInstance().addPlayerType(plugin.getName(), loadPlugin(plugin));
+            PlayerFactory.instance.addPlayerType(plugin.getName(), loadPlugin(plugin));
         }
         for (Plugin plugin : config.getDraftCubes()) {
-            CubeFactory.getInstance().addDraftCube(plugin.getName(), loadPlugin(plugin));
+            CubeFactory.instance.addDraftCube(plugin.getName(), loadPlugin(plugin));
         }
         for (Plugin plugin : config.getDeckTypes()) {
-            DeckValidatorFactory.getInstance().addDeckType(plugin.getName(), loadPlugin(plugin));
+            DeckValidatorFactory.instance.addDeckType(plugin.getName(), loadPlugin(plugin));
         }
 
         for (ExtensionPackage pkg : extensions) {
             Map<String, Class> draftCubes = pkg.getDraftCubes();
             for (String name : draftCubes.keySet()) {
                 logger.info("Loading extension: [" + name + "] " + draftCubes.get(name).toString());
-                CubeFactory.getInstance().addDraftCube(name, draftCubes.get(name));
+                CubeFactory.instance.addDraftCube(name, draftCubes.get(name));
             }
             Map<String, Class> deckTypes = pkg.getDeckTypes();
             for (String name : deckTypes.keySet()) {
                 logger.info("Loading extension: [" + name + "] " + deckTypes.get(name));
-                DeckValidatorFactory.getInstance().addDeckType(name, deckTypes.get(name));
+                DeckValidatorFactory.instance.addDeckType(name, deckTypes.get(name));
             }
         }
 
@@ -213,6 +175,7 @@ public class Main {
         logger.info("Config - save game active: " + (config.isSaveGameActivated() ? "true" : "false"));
         logger.info("Config - backlog size    : " + config.getBacklogSize());
         logger.info("Config - lease period    : " + config.getLeasePeriod());
+        logger.info("Config - sock wrt timeout: " + config.getSocketWriteTimeout());
         logger.info("Config - max pool size   : " + config.getMaxPoolSize());
         logger.info("Config - num accp.threads: " + config.getNumAcceptThreads());
         logger.info("Config - second.bind port: " + config.getSecondaryBindPort());
@@ -250,12 +213,12 @@ public class Main {
     }
 
     static void initStatistics() {
-        ServerMessagesUtil.getInstance().setStartDate(System.currentTimeMillis());
+        ServerMessagesUtil.instance.setStartDate(System.currentTimeMillis());
     }
 
     static boolean isAlreadyRunning(InvokerLocator serverLocator) {
         Map<String, String> metadata = new HashMap<>();
-        metadata.put(SocketWrapper.WRITE_TIMEOUT, "2000");
+        metadata.put(SocketWrapper.WRITE_TIMEOUT, String.valueOf(ConfigSettings.instance.getSocketWriteTimeout()));
         metadata.put("generalizeSocketException", "true");
         try {
             MageServer testServer = (MageServer) TransporterClient.createTransporterClient(serverLocator.getLocatorURI(), MageServer.class, metadata);
@@ -273,25 +236,29 @@ public class Main {
 
         @Override
         public void handleConnectionException(Throwable throwable, Client client) {
-            Session session = SessionManager.getInstance().getSession(client.getSessionId());
-            if (session != null) {
+            String sessionId = client.getSessionId();
+            Optional<Session> session = SessionManager.instance.getSession(sessionId);
+            if (!session.isPresent()) {
+                logger.trace("Session not found : " + sessionId);
+            } else {
+                UUID userId = session.get().getUserId();
                 StringBuilder sessionInfo = new StringBuilder();
-                User user = UserManager.getInstance().getUser(session.getUserId());
-                if (user != null) {
-                    sessionInfo.append(user.getName());
+                Optional<User> user = UserManager.instance.getUser(userId);
+                if (user.isPresent()) {
+                    sessionInfo.append(user.get().getName()).append(" [").append(user.get().getGameInfo()).append(']');
                 } else {
                     sessionInfo.append("[user missing] ");
                 }
-                sessionInfo.append(" at ").append(session.getHost()).append(" sessionId: ").append(session.getId());
+                sessionInfo.append(" at ").append(session.get().getHost()).append(" sessionId: ").append(session.get().getId());
                 if (throwable instanceof ClientDisconnectedException) {
                     // Seems like the random diconnects from public server land here and should not be handled as explicit disconnects
                     // So it should be possible to reconnect to server and continue games if DisconnectReason is set to LostConnection
-                    //SessionManager.getInstance().disconnect(client.getSessionId(), DisconnectReason.Disconnected);
-                    SessionManager.getInstance().disconnect(client.getSessionId(), DisconnectReason.LostConnection);
+                    //SessionManager.instance.disconnect(client.getSessionId(), DisconnectReason.Disconnected);
+                    SessionManager.instance.disconnect(client.getSessionId(), DisconnectReason.LostConnection);
                     logger.info("CLIENT DISCONNECTED - " + sessionInfo);
                     logger.debug("Stack Trace", throwable);
                 } else {
-                    SessionManager.getInstance().disconnect(client.getSessionId(), DisconnectReason.LostConnection);
+                    SessionManager.instance.disconnect(client.getSessionId(), DisconnectReason.LostConnection);
                     logger.info("LOST CONNECTION - " + sessionInfo);
                     if (logger.isDebugEnabled()) {
                         if (throwable == null) {
@@ -301,7 +268,9 @@ public class Main {
                         }
                     }
                 }
+
             }
+
         }
     }
 
@@ -309,10 +278,10 @@ public class Main {
 
         protected Connector connector;
 
-        public MageTransporterServer(InvokerLocator locator, Object target, String subsystem, MageServerInvocationHandler callback) throws Exception {
+        public MageTransporterServer(InvokerLocator locator, Object target, String subsystem, MageServerInvocationHandler serverInvocationHandler) throws Exception {
             super(locator, target, subsystem);
-            connector.addInvocationHandler("callback", callback);
-            connector.setLeasePeriod(ConfigSettings.getInstance().getLeasePeriod());
+            connector.addInvocationHandler("callback", serverInvocationHandler);
+            connector.setLeasePeriod(ConfigSettings.instance.getLeasePeriod());
             connector.addConnectionListener(new ClientConnectionListener());
         }
 
@@ -332,18 +301,44 @@ public class Main {
 
         @Override
         public void setMBeanServer(MBeanServer server) {
-
+            /**
+             * An MBean is a managed Java object, similar to a JavaBeans
+             * component, that follows the design patterns set forth in the JMX
+             * specification. An MBean can represent a device, an application,
+             * or any resource that needs to be managed. MBeans expose a
+             * management interface that consists of the following:
+             *
+             * A set of readable or writable attributes, or both. A set of
+             * invokable operations. A self-description.
+             *
+             */
+            if (server != null) {
+                logger.info("Default domain: " + server.getDefaultDomain());
+            }
         }
 
         @Override
         public void setInvoker(ServerInvoker invoker) {
-            ((BisocketServerInvoker) invoker).setSecondaryBindPort(ConfigSettings.getInstance().getSecondaryBindPort());
-            ((BisocketServerInvoker) invoker).setBacklog(ConfigSettings.getInstance().getBacklogSize());
-            ((BisocketServerInvoker) invoker).setNumAcceptThreads(ConfigSettings.getInstance().getNumAcceptThreads());
+            ((BisocketServerInvoker) invoker).setSecondaryBindPort(ConfigSettings.instance.getSecondaryBindPort());
+            ((BisocketServerInvoker) invoker).setBacklog(ConfigSettings.instance.getBacklogSize());
+            ((BisocketServerInvoker) invoker).setNumAcceptThreads(ConfigSettings.instance.getNumAcceptThreads());
+        }
+
+        @Override
+        public void addListener(InvokerCallbackHandler callbackHandler) {
+            // Called for every client connecting to the server
+            ServerInvokerCallbackHandler handler = (ServerInvokerCallbackHandler) callbackHandler;
+            try {
+                String sessionId = handler.getClientSessionId();
+                SessionManager.instance.createSession(sessionId, callbackHandler);
+            } catch (Throwable ex) {
+                logger.fatal("", ex);
+            }
         }
 
         @Override
         public Object invoke(final InvocationRequest invocation) throws Throwable {
+            // Called for every client connecting to the server (after add Listener)
             String sessionId = invocation.getSessionId();
             Map map = invocation.getRequestPayload();
             String host;
@@ -353,26 +348,20 @@ public class Main {
             } else {
                 host = "localhost";
             }
-            SessionManager.getInstance().getSession(sessionId).setHost(host);
-            return null;
-        }
-
-        @Override
-        public void addListener(InvokerCallbackHandler callbackHandler) {
-            ServerInvokerCallbackHandler handler = (ServerInvokerCallbackHandler) callbackHandler;
-            try {
-                String sessionId = handler.getClientSessionId();
-                SessionManager.getInstance().createSession(sessionId, callbackHandler);
-            } catch (Throwable ex) {
-                logger.fatal("", ex);
+            Optional<Session> session = SessionManager.instance.getSession(sessionId);
+            if (!session.isPresent()) {
+                logger.error("Session not found : " + sessionId);
+            } else {
+                session.get().setHost(host);
             }
+            return null;
         }
 
         @Override
         public void removeListener(InvokerCallbackHandler callbackHandler) {
             ServerInvokerCallbackHandler handler = (ServerInvokerCallbackHandler) callbackHandler;
             String sessionId = handler.getClientSessionId();
-            SessionManager.getInstance().disconnect(sessionId, DisconnectReason.Disconnected);
+            SessionManager.instance.disconnect(sessionId, DisconnectReason.Disconnected);
         }
 
     }
@@ -394,7 +383,7 @@ public class Main {
         try {
             classLoader.addURL(new File(pluginFolder, plugin.getJar()).toURI().toURL());
             logger.debug("Loading game type: " + plugin.getClassName());
-            return (MatchType) Class.forName(plugin.getTypeName(), true, classLoader).newInstance();
+            return (MatchType) Class.forName(plugin.getTypeName(), true, classLoader).getConstructor().newInstance();
         } catch (ClassNotFoundException ex) {
             logger.warn("Game type not found:" + plugin.getJar() + " - check plugin folder", ex);
         } catch (Exception ex) {
@@ -407,7 +396,7 @@ public class Main {
         try {
             classLoader.addURL(new File(pluginFolder, plugin.getJar()).toURI().toURL());
             logger.debug("Loading tournament type: " + plugin.getClassName());
-            return (TournamentType) Class.forName(plugin.getTypeName(), true, classLoader).newInstance();
+            return (TournamentType) Class.forName(plugin.getTypeName(), true, classLoader).getConstructor().newInstance();
         } catch (ClassNotFoundException ex) {
             logger.warn("Tournament type not found:" + plugin.getName() + " / " + plugin.getJar() + " - check plugin folder", ex);
         } catch (Exception ex) {
@@ -422,12 +411,7 @@ public class Main {
             directory.mkdirs();
         }
         File[] files = directory.listFiles(
-                new FilenameFilter() {
-            @Override
-            public boolean accept(File dir, String name) {
-                return name.endsWith(".game");
-            }
-        }
+                (dir, name) -> name.endsWith(".game")
         );
         for (File file : files) {
             file.delete();
